compiler/tests/ar/errors/pure_print.salam
// لغة: العربية
// توقع: E012
نقي دالة صارخ(قیمة: صحیح): صحیح:
    اطبع قیمة
    أرجع قیمة
نهاية

دالة الرئیسیة:
    اطبع صارخ(2)
نهاية
